Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,7 @@ trigger:
 
 jobs:
 - job: builjob
-  displayname: build and package NopCommerce
+  displayName: buildandpackage
   pool: 
     vmimage: ubuntu-22.04
   steps: 
