--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,4 +17,11 @@ jobs:
         command: build
         projects: '**/NopCommerce.sln'
         arguments: '--configiration Release'
-
+    - task: PowerShell@2
+      inputs:
+        targetType: 'inline'
+        script: |
+          # Write your PowerShell commands here.
+          
+          Write-Host "Hello World"
+          Write-Host "I want to create build and release pipeline"
